# MatatuGo_BE

./: .gitignore  README.md  ROUTING_SYSTEM_SUCCESS.md  backup.sql  docker-compose.yml  dockerfile  import_trips.sh  populate_edges.sh  pyproject.toml  update_route_ids.sh
api/: .gitignore
api/alembic/: env.py
api/alembic/versions/: 03883975b23f_remove_fareperiod_from_fare_definitions.py  28e05bbaca21_add_trips_table.py  3c61d9e662c1_initial_schema.py  5a431c218b67_remove_nullable_false.py  5a898e26a7a2_create_users_table.py  6c5c2a97ba43_test_column_add.py  9d131592f751_test_column_deleted.py  a82244fba31b_add_new_node_edges_model.py  bbcc14ec0be3_update_models_and_relationships.py  f82cde9a7fa4_add_route_id_column_on_edge.py
api/app/: config.py  database.py  main.py
api/app/scripts/: import_route_ids_to_edges.py  import_trips.py  populate_edges.py  rebuild_edges.py  rebuild_edges_copy.py  rebuild_gtfs.py
api/app/v1/: __init__.py
api/app/v1/crud/: auth.py  routes.py  routes_new.py  routes_old.py
api/app/v1/dependencies/: auth.py
api/app/v1/models/: baseModel.py  edges.py  fare_definition.py  fare_rules.py  routes.py  shapes.py  stop_times.py  stops.py  transfers.py  trips.py  user.py
api/app/v1/router/: __init__.py  auth.py  routes.py
api/app/v1/schemas/: auth.py
api/app/v1/utils/: jwt.py  llm_service.py
api/scripts/: load_data.py  populate.py
